Correct bugs.  Add test command for GridWorld.

--- a/algorithms/algorithms.vcxproj
+++ b/algorithms/algorithms.vcxproj
@@ -145,6 +145,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Agent.hpp" />
     <ClInclude Include="Command.hpp" />
     <ClInclude Include="Matrix.hpp" />
     <ClInclude Include="PoissonProcess.hpp" />
