--- a/algorithms/algorithms.vcxproj.filters
+++ b/algorithms/algorithms.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="Usage.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Agent.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
